fix: css; some elements were off screen on different aspect ratios

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -35,5 +35,7 @@ input[type="file"] {
 body {
     background: #0b0e1b;
     color: #dfe1f0;
+
+    overflow: hidden;
 }
 
