--- a/src/css/media-view.css
+++ b/src/css/media-view.css
@@ -1,6 +1,6 @@
 .video-container {
     width: 100%;
-    height: 100%;
+    height: calc(100% - 25px);
 
     display: flex;
     flex-direction: column;
